--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="title_currency_detail">Currency Detail</string>
     <string name="buttonNo">No</string>
     <string name="buttonYes">Yes</string>
+    <string name="buttonOk">Ok</string>
     <string name="title_activity_config">Configurations</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
