--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="buttonYes">Yes</string>
     <string name="buttonOk">Ok</string>
     <string name="title_activity_config">Configurations</string>
+    <string name="title_activity_beneficiary">Beneficiary</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
